--- a/css/style.css
+++ b/css/style.css
@@ -186,7 +186,7 @@ body{
     width: 100%;
     text-align: center;
 }
-    
+
 
 
 
@@ -205,25 +205,63 @@ body{
 
 
 
-@media (max-width:991px){
-    #menu-btn{
-        display:inline-block;
 
+
+/* media queries  */
+@media (max-width:991px){
+
+    html{
+        font-size: 55%;
+    }
+
+    .header{
+        padding:1.5rem 2rem;
+    }
+
+    section{
+        padding:2rem;
+    }
+
+}
+
+@media (max-width:768px){
+
+    #menu-btn{
+        display: inline-block;
     }
 
     .header .navbar{
-        position:absolute;
+        position: absolute;
         top:100%; right: -100%;
         background: #fff;
-        width:30rem;
+        width: 30rem;
         height: calc(100vh - 9.5rem);
     }
 
+    .header .navbar.active{
+        right:0;
+    }
+
     .header .navbar a{
-        color:var(--black); 
+        color:var(--black);
         display: block;
         margin:1.5rem;
         padding:.5rem;
-        font-size: 2rem; 
+        font-size: 2rem;
     }
+
+    .header .search-form{
+        width: 90%;
+        right: 2rem;
+    }
+
+}
+
+@media (max-width:450px){
+
+    html{
+        font-size: 50%;
+    }
+
+    
 }
